--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "aos": "^2.3.4",
     "next": "15.5.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
